# spotify-data-mining

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  features_analysis.ipynb  genres_analysis.ipynb  genres_simplified.txt  kaggle_analysis.ipynb  logging.conf  main.py  requirements.txt  setup.cfg
.github/workflows/: docker-image.yml
api/: __init__.py  albums.py  artists.py  tracks.py
data/genres/: genres_counts.json  genres_general.txt
data/outputs/: geo_analysis.html  recomm_sys_demo.html
db/: connection.py  main.py  tables.py
db/_connection/: connection.py
db/gateway/: __init__.py  gateway.py
domain/: album.py  artist.py
notebooks/: europe.dbf  europe.geojson  europe.shp  europe.shx  features_analysis.ipynb  genres_analysis.ipynb  geo_analysis.ipynb  recomm_sys_demo.ipynb  test.ipynb
scripts/: init_db.py  local_init_db.py
service/: app.py
src/: scraper.py  utils.py
src/api/: __init__.py  albums.py  artists.py  async_utils.py  auth.py  tracks.py  users.py
src/db/: __init__.py  gateway.py  main.py  tables.py
src/db/_connection/: connection.py
src/db/gateway/: __init__.py  gateway.py
src/domain/: track.py
src/processing/: __init__.py  processing.py
src/recommendation/: engine.py  user_vector.py
src/scraper/: scraper.py
src/service/: app.py
