[metadata]
name = spotify-data-mining
description = Data Mining project, AGH UST
author = Adam Księżyk, Wojciech Konieczkowicz, Paweł Długosz
license = MIT
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3.9

[options]
packages =
    db
    api
install-requires = 
    requests 
    python-dotenv 
    jupyter
    pandas 
    plotly 
    sqlalchemy 
    psycopg2-binary 
    seaborn 
    matplotlib 
    scikit-learn 
    ipykernel 
    grequests 
    pycountry 
    pexpect 
    wordcloud 
python_requires = >=3.9
package_dir =
    =src
zip_safe = no